# LeShade

./: main.py  meson.build
fedora/: leshade-nightly.spec  leshade.spec
flatpak/: io.github.ishidawg.LeShade.yml
scripts_core/: script_download_re.py  script_shaders.py  script_vulkan.py
utils/: utils.py
widgets/pages/: page_clone.py  page_download.py  page_installation.py
